<resources>
    <string name="app_name">Cable Journal</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Вкладки -->
    <string name="ane">Активное сетевое оборудование</string>
    <string name="pp">Патч-панель</string>
    <string name="mainTab">Главная</string>

    <!-- Выезжающее меню-->
    <string name="openDrawer">Открыть навигационную шторку</string>
    <string name="closeDrawer">Закрыть навигационную шторку</string>
    <string name="addANE">Добавить активное оборудование</string>
    <string name="addPP">Добавить патч-панель</string>
    <string name="addEquipment">Добавить оборудование</string>
    <string name="equipment">Оборудование</string>
    <string name="exportExcel">Экспорт в Excel</string>
    <string name="importExcel">Импорт из Excel</string>

    <!-- Toasts -->
    <string name="databaseUnavailable">База данных не доступна</string>
    <string name="delete_done">Удаление выполнено</string>
    <string name="delete_undone">Удаление не выполнено</string>


    <!-- Поля -->
    <string name="name">Имя:</string>
    <string name="model">Модель:</string>
    <string name="ports">Порты:</string>
    <string name="pp_">Патч-панель:</string>
    <string name="label">Надпись:</string>
    <string name="room">Кабинет:</string>
    <string name="type">Тип:</string>
    <string name="socket">Розетка:</string>
    <string name="inventory">Инвентарный номер:</string>
    <string name="countPorts">Количество портов:</string>
    <string name="socketLabel">Надпись на розетке</string>
    <string name="labelHint">Введите надпись</string>
    <string name="labelSocketHint">Введите надпись на розетке</string>
    <string name="roomHint">Введите кабинет</string>
    <string name="nameHint">Введите имя</string>
    <string name="modelHint">Введите модель</string>
    <string name="typeHint">Введите тип</string>
    <string name="inventoryHint">Введите инвентарный номер</string>
    <string name="countPortsHint">Введите количество портов</string>


    <string name="inSocket">В розетке:</string>
    <string name="equipmentHint">Введите название оборудования</string>
    <string name="AllEquipmentIsConnected">Всё оборудование подключено к розеткам</string>


    <!-- Диалоги -->
    <string name="check">Предупреждение</string>
    <string name="areYouSure">Вы уверены?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>


    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>


    <string name="empty">Пусто</string>
    <string name="portsNotFree">Свободных портов нет</string>

    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="back">Назад</string>


    <string name="linkDeleted">Связь удалена</string>
    <string name="linkNotDeleted">Связь не удалена</string>
    <string name="portNotSelected">Не выбран порт</string>

    <string name="connectSaved">"Подключение сохранено"</string>
    <string name="connectNotSaved">"Подключение не сохранено"</string>


    <string name="equipmentOnlyFromList">Оборудование нужно выбрать из списка</string>

    <string name="fillAllFields">"Нужно заполнить все поля."</string>
    <string name="enterAnotherName">"Такое имя уже есть."</string>
    <string name="freePortsNotExist">Свободных портов нет</string>

    <string name="savedInDB">Данные внесены в БД</string>
    <string name="notSavedInDB">Данные не внесены в БД</string>

    <string name="imported">Импортировано - </string>

    <string name="search">Поиск</string>
    <string name="title_activity_test">testActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>