<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEquipmentActivity">

    <include
        layout="@layout/toolbar"/>

    <TableRow>
        <TextView
            android:text="@string/name"
            android:layout_weight="0.3"/>
        <EditText
            android:id="@+id/eq_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/nameHint"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/model"
            android:layout_weight="0.3" />
        <AutoCompleteTextView
            android:id="@+id/eq_model"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"
            android:hint="@string/modelHint" />

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/type"
            android:layout_weight="0.3"/>
        <AutoCompleteTextView
            android:id="@+id/eq_type"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:inputType="text"
            android:hint="@string/typeHint"/>

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/inventory"
            android:layout_weight="0.3"/>
        <EditText
            android:id="@+id/eq_inv"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:maxLength="20"
            android:inputType="text"
            android:hint="@string/inventoryHint"/>

    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/room"
            android:layout_weight="0.3"/>
        <EditText
            android:id="@+id/eq_room"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:inputType="text"
            android:hint="@string/roomHint"/>

    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:text="@string/back" />
    </TableRow>

</TableLayout>