<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="10dp"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/label"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/port_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/labelHint"
                    android:inputType="text"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/socketLabel"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/socket_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/labelSocketHint"
                    android:inputType="text"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:text="@string/room"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:hint="@string/roomHint"
                    android:inputType="text"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/ane"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow>

                <Spinner
                    android:id="@+id/ane_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow>

                <Spinner
                    android:id="@+id/ane_port_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:layout_span="2"
                    android:layout_weight="1" />

            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/free_ports_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/portsNotFree"
                    android:visibility="gone" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/inSocket"
                    android:textSize="25sp" />
            </TableRow>


            <TableRow>

                <AutoCompleteTextView
                    android:id="@+id/list_equipment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:dropDownAnchor="@id/ane_port_list"
                    android:dropDownHeight="150dp"
                    android:hint="@string/equipmentHint"
                    android:scrollbars="vertical" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/free_equipment_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="@string/AllEquipmentIsConnected"
                    android:visibility="gone" />
            </TableRow>


        </TableLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save"></Button>

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/cancel"></Button>
    </LinearLayout>
</LinearLayout>

