<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TableRow>
        <TextView
            android:text="@string/name"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/name_eq"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/model"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/model_eq"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/type"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/type_eq"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/inventory"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/inv_eq"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>

</TableLayout>



