<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <TextView
            android:text="@string/name"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/name_ane"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/model"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/model_ane"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_span="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/ports"
            android:textSize="25sp"
            android:layout_weight="0.15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/count_free_ane"
            android:textSize="25sp"
            android:layout_weight="0.1"
            android:textAlignment="textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="/"
            android:textSize="25sp"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/count_ane"
            android:textSize="25sp"
            android:layout_weight="0.75"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>
</TableLayout>